@@ -1,15 +1,13 @@
 package myvertx.ant.verticle;
 
+import io.vertx.core.MultiMap;
 import io.vertx.core.http.HttpServerResponse;
 import io.vertx.core.json.Json;
 import io.vertx.ext.web.FileUpload;
 import io.vertx.ext.web.Router;
 import io.vertx.ext.web.handler.BodyHandler;
 import lombok.extern.slf4j.Slf4j;
-import myvertx.ant.config.MainProperties;
-import myvertx.ant.ra.FileUploadRa;
 import myvertx.ant.ra.PathRa;
-import rebue.wheel.core.file.FileUtils;
 import rebue.wheel.vertx.ro.Vro;
 import rebue.wheel.vertx.verticle.AbstractWebVerticle;
 
@@ -18,8 +16,7 @@ import javax.inject.Named;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.LinkedList;
+import java.nio.file.StandardCopyOption;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -27,10 +24,11 @@ import java.util.stream.Stream;
 @Slf4j
 public class WebVerticle extends AbstractWebVerticle {
     @Inject
-    private MainProperties mainProperties;
+    @Named("rootPath")
+    private String rootPath;
     @Inject
     @Named("uploadFileSizeLimit")
-    private Long           uploadFileSizeLimit;
+    private Long   uploadFileSizeLimit;
 
     @Override
     protected void configRouter(final Router router) {
@@ -49,8 +47,7 @@ public class WebVerticle extends AbstractWebVerticle {
                         return;
                     }
                     String pathParam   = pathParams.get(0);
-                    Path   rootPath    = Paths.get(FileUtils.getClassesPath(), mainProperties.getRoot());
-                    Path   dirFullPath = Paths.get(rootPath.toString(), pathParam);
+                    Path   dirFullPath = Path.of(rootPath, pathParam);
                     log.debug("指定目录的全路径为: {}", dirFullPath);
 
                     try (Stream<Path> stream = Files.list(dirFullPath)) {
@@ -67,31 +64,61 @@ public class WebVerticle extends AbstractWebVerticle {
                         response.end(Json.encode(Vro.warn("读取路径失败", e.getMessage())));
                     }
                 });
-        BodyHandler bodyHandler = BodyHandler.create();
+        BodyHandler bodyHandler = BodyHandler.create()
+                .setUploadsDirectory(rootPath);
+//                .setMergeFormAttributes(true);
         if (uploadFileSizeLimit != 0) {
             bodyHandler.setBodyLimit(uploadFileSizeLimit);
         }
         router.post("/ant/file/upload")
                 .handler(bodyHandler)
                 .handler(ctx -> {
-                    log.debug("body: {}", ctx.body().asString());
-                    List<FileUpload>   fileUploads   = ctx.fileUploads();
-                    List<FileUploadRa> fileUploadRas = new LinkedList<>();
+                    final HttpServerResponse response = ctx.response();
+                    response.putHeader("Content-Type", "application/json");
+
+                    MultiMap formAttributes = ctx.request().formAttributes();
+                    log.debug("formAttributes: {}", formAttributes);
+                    String           fileDir     = formAttributes.get("fileDir");
+                    List<FileUpload> fileUploads = ctx.fileUploads();
                     for (FileUpload fileUpload : fileUploads) {
-                        fileUploadRas.add(FileUploadRa.builder()
-                                .name(fileUpload.name())
-                                .uploadedFileName(fileUpload.uploadedFileName())
-                                .fileName(fileUpload.fileName())
-                                .size(fileUpload.size())
-                                .contentType(fileUpload.contentType())
-                                .contentTransferEncoding(fileUpload.contentTransferEncoding())
-                                .charSet(fileUpload.charSet())
-                                .name(fileUpload.name())
-                                .name(fileUpload.name())
-                                .build());
+                        log.debug("""
+                                        fileUpload:
+                                        - name: {}
+                                        - uploadedFileName: {}
+                                        - fileName: {}
+                                        - size: {}
+                                        - contentType: {}
+                                        - contentTransferEncoding: {}
+                                        - charSet: {}
+                                        """,
+                                fileUpload.name(),
+                                fileUpload.uploadedFileName(),
+                                fileUpload.fileName(),
+                                fileUpload.size(),
+                                fileUpload.contentType(),
+                                fileUpload.contentTransferEncoding(),
+                                fileUpload.charSet()
+                        );
+
+                        Path   srcPath    = Path.of(fileUpload.uploadedFileName());
+                        Path   dstPath    = Path.of(rootPath, fileDir, fileUpload.fileName());
+                        String dstPathStr = dstPath.toString();
+                        int    i          = 0;
+                        while (Files.exists(dstPath)) {
+                            i++;
+                            dstPath = Path.of(dstPathStr + "(" + i + ")");
+                        }
+                        log.debug("remove: {} -> {}", srcPath, dstPath);
+                        try {
+                            Files.move(srcPath,
+                                    dstPath,
+                                    StandardCopyOption.ATOMIC_MOVE);
+                        } catch (IOException e) {
+                            response.end(Json.encode(Vro.fail("文件上传后移动出错", e.getMessage())));
+                            return;
+                        }
                     }
-                    log.debug("fileUploads: {}", fileUploadRas);
-                    ctx.response().end(Json.encode(Vro.success("文件上传成功", fileUploadRas)));
+                    response.end(Json.encode(Vro.success("文件上传成功")));
                 });
     }
 
